Legend:

[+] New/improved feature
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.2.0

[+] Support for cdada_str

v0.1.0 (23d May 2020)

[+] Support for cdada_list, cdada_map, cdada_set