@@ -2,6 +2,6 @@ MAINTAINERCLEANFILES = Makefile.in
 
 lib_LTLIBRARIES = libcdada.la
 
-libcdada_la_SOURCES = list.cc map.cc set.cc str.cc utils.c
+libcdada_la_SOURCES = bbitmap.cc list.cc map.cc set.cc str.cc utils.c
 libcdada_la_CPPFLAGS = -I$(top_srcdir)/include/ -D__CDADA_INTERNAL_INCLUDE
 libcdada_la_LIBADD =
