@@ -10,6 +10,7 @@ Change log
 
 v0.2.0
 
+[+] Support for cdada_bbitmap
 [+] Support for cdada_str
 
 v0.1.0 (23d May 2020)
